Fix scrolling when overflow

--- a/resources/less/chrome/main.less
+++ b/resources/less/chrome/main.less
@@ -223,7 +223,6 @@
 
       #tasks-container {
         margin-top: 6px;
-        height: 100%;
 
         .toggle-hide-done {
           margin-left: 4px;
